--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Vcs-Svn: svn://anonscm.debian.org/python-modules/packages/markupsafe/trunk/
 Vcs-Browser: http://anonscm.debian.org/viewvc/python-modules/packages/markupsafe/trunk/
 XS-Python-Version: >= 2.4
 X-Python3-Version: >= 3.3
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 Package: python-markupsafe
 Architecture: any
