--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Vcs-Git: https://anonscm.debian.org/git/python-modules/packages/markupsafe.git
 Vcs-Browser: https://anonscm.debian.org/cgit/python-modules/packages/markupsafe.git
 XS-Python-Version: >= 2.4
 X-Python3-Version: >= 3.3
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster
 
 Package: python-markupsafe
 Architecture: any
