--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,8 @@
-include LICENSE README.rst AUTHORS
-recursive-include markupsafe *.c
+include CHANGES.rst
+include LICENSE.rst
+include README.rst
+include tox.ini
+graft docs
+prune docs/_build
+graft tests
+global-exclude *.py[co]
