--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Standards-Version: 4.0.0
 Homepage: https://pypi.python.org/pypi/MarkupSafe
 Vcs-Git: https://salsa.debian.org/python-team/modules/markupsafe.git
 Vcs-Browser: https://salsa.debian.org/python-team/modules/markupsafe
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
 
 Package: python-markupsafe
 Architecture: any
