--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Standards-Version: 4.5.0
 Homepage: https://palletsprojects.com/p/markupsafe/
 Vcs-Git: https://salsa.debian.org/python-team/modules/markupsafe.git
 Vcs-Browser: https://salsa.debian.org/python-team/modules/markupsafe
-XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: python-markupsafe
 Architecture: any
