--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,28 @@
 [tox]
 envlist =
-    py{37,36,35,34,27,py3,py3,py}
-    stylecheck
-    docs-html
-    coverage-report
+    py3{12,11,10,9,8,7}
+    pypy39
+    style
+    typing
+    docs
 skip_missing_interpreters = true
 
 [testenv]
-setenv =
-    COVERAGE_FILE = .coverage.{envname}
-deps =
-    pytest-cov
-commands = pytest --tb=short --cov --cov-report= {posargs}
+package = wheel
+deps = -r requirements/tests.txt
+commands = pytest -v --tb=short --basetemp={envtmpdir} {posargs}
 
-[testenv:stylecheck]
+[testenv:style]
 deps = pre-commit
 skip_install = true
-commands = pre-commit run --all-files --show-diff-on-failure
+commands = pre-commit run --all-files
 
-[testenv:docs-html]
-deps = -r docs/requirements.txt
+[testenv:typing]
+package = wheel
+deps = -r requirements/typing.txt
+commands = mypy
+
+[testenv:docs]
+package = wheel
+deps = -r requirements/docs.txt
 commands = sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
-
-[testenv:coverage-report]
-setenv =
-    COVERAGE_FILE = .coverage
-deps = coverage
-skip_install = true
-commands =
-    coverage combine
-    coverage html
-    coverage report
-
-[testenv:codecov]
-passenv = CI TRAVIS TRAVIS_*
-setenv =
-    COVERAGE_FILE = .coverage
-deps = codecov
-skip_install = true
-commands =
-    coverage combine
-    codecov
-    coverage report
