--- a/debian/control
+++ b/debian/control
@@ -24,6 +24,7 @@ Depends:
  ${misc:Depends},
  ${python3:Depends},
  ${shlibs:Depends},
+Breaks: python3-jinja2 (< 3)
 Description: HTML/XHTML/XML string library
  MarkupSafe is a Python library implementing a unicode subclass that is
  aware of HTML escaping rules. It can be used to implement automatic
